--- a/deedy_resume_Hien.tex
+++ b/deedy_resume_Hien.tex
@@ -64,10 +64,10 @@
 
 
 \namesection{Hien}{Nguyen}
-%{Email: hiendn451@gmail.com | Phone: +1 (518)368-2484 | Linkedin: \href{https://www.linkedin.com/in/hien-nguyen-5567149a}{\custombold{linkedin.com/in/hien-nguyen-5567149a}} | Github: \href{https://github.com/nguyenduchien1994}{\custombold{github.com/nguyenduchien1994}} | Skype: hiendn451
-%}
+{Email: nguyenduchien1994@gmail.com | Phone: +1 (518)368-2484 | Linkedin: \href{https://www.linkedin.com/in/hien-nguyen-5567149a}{\custombold{linkedin.com/in/hien-nguyen-5567149a}} | Github: \href{https://github.com/nguyenduchien1994}{\custombold{github.com/nguyenduchien1994}} | Skype: hiendn451
+}
 %{Email: hiendn451@gmail.com | Phone: +1 (518)368-2484} \\
-{\custombold{Summary}: Results-driven software engineer with extensive experience in web application development and cybersecurity. Experienced in designing enterprise software and collaborating in small- to mid-size engineering teams. Interested in full-stack software engineering and systems development positions.}
+%{\custombold{Summary}: Results-driven software engineer with extensive experience in web application development and cybersecurity. Experienced in designing enterprise software and collaborating in small- to mid-size engineering teams. Interested in full-stack software engineering and systems development positions.}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -76,39 +76,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{minipage}[t]{0.325\textwidth} 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     Programming Languages
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Languages}
-\vspace{2mm} % Hacky fix for awkward extra vertical space 
-\begin{tabular}{lll}
-\custombold{Proficient} & \custombold{Mid} & \custombold{Familiar} \\
-Python & Matlab & PHP\\
-Java & JavaScript & SQL\\
-HTML/CSS & C/C++ & Ruby\\
-Bash & \LaTeX\ & Perl\\ 
-\end{tabular}
-\sectionsep
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     TOOLS
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\vspace{2mm}
-\section{Software} 
-\vspace{2mm} % Hacky fix for awkward extra vertical space 
-\begin{tabular}{ll}
-Unix/Linux & Git/Github \\
-Idea Intellij & IBM Clearcase \\
-Microsoft Azure & AWS \\
-Google Web Toolkit & Django \\ 
-Jira & MuleSoft
-
-\end{tabular}
-\sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EDUCATION
@@ -127,6 +94,72 @@ December 2017 \\ GPA: 3.60
 \location{Schenectady, NY}
 \descript{Bachelor of Science \\ Computer Engineering }
 June 2016 \\ GPA: 3.71
+\sectionsep
+
+%\section{Coursework}
+%\vspace{1mm}
+%\flushleft
+%\textbullet \, Machine Learning \\
+%\textbullet \, Advanced Data Structures \\
+%\textbullet \, Computer Architecture \\
+%\textbullet \, Large-Scale Software Design \\
+
+\section{Coursework}
+\vspace{2mm} % Hacky fix for awkward extra vertical space 
+\flushleft
+\subsection{Graduate}
+\vspace{1mm}
+\textbullet \, Advanced Data Structure \\
+\textbullet \, Machine Learning \\
+%\textbullet \, Digital VLSI Circuit Design \\
+\textbullet \, Computer Architecture \\
+\textbullet \, Cybersecurity \\
+\textbullet \, Vulnerabilities, Defense Systems \& Malware Analysis \\
+%\sectionsep
+
+\vspace{2mm}
+\subsection{Undergraduate}
+\vspace{1mm} % Hacky fix for awkward extra vertical space 
+\flushleft
+%\textbullet \, Advanced Hardware Systems \\
+\textbullet \, Algorithm Design \& Analysis \\
+\textbullet \, Computer Organization \\
+\textbullet \, Data Communication \& Networks \\
+\textbullet \, Embedded Microcontroller System \\
+\textbullet \, Large-Scale Software Design \\
+%\sectionsep
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     Programming Languages
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\vspace{2mm}
+\section{Languages}
+\vspace{2mm} % Hacky fix for awkward extra vertical space 
+\begin{tabular}{lll}
+\custombold{Proficient} & \custombold{Mid} & \custombold{Familiar} \\
+Python & Matlab & PHP\\
+Java & JavaScript & SQL\\
+HTML/CSS & C/C++ & Ruby\\
+Bash & \LaTeX\ & Perl\\ 
+\end{tabular}
+\sectionsep
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     TOOLS
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section{Software} 
+\vspace{2mm} % Hacky fix for awkward extra vertical space 
+\begin{tabular}{ll}
+Unix/Linux & Git/Github \\
+Idea Intellij & IBM Clearcase \\
+Microsoft Azure & AWS \\
+Google Web Toolkit & Django \\ 
+Jira & MuleSoft
+
+\end{tabular}
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -159,20 +192,11 @@ June 2016 \\ GPA: 3.71
 %\textbullet \, Large-Scale Software Design \\
 %\sectionsep
 
-\section{Coursework}
-\vspace{1mm}
-\flushleft
-\textbullet \, Machine Learning \\
-\textbullet \, Advanced Data Structures \\
-\textbullet \, Computer Architecture \\
-\textbullet \, Large-Scale Software Design \\
-\textbullet \, Cybersecurity \\
-
-\vspace{2mm}
-\section{Contact}
-\vspace{2mm}
-{\custombold{Email}: nguyenduchien1994@gmail.com} \\
-{\custombold{Phone}: +1 (518)368-2484} \\
+%\vspace{2mm}
+%\section{Contact}
+%\vspace{2mm}
+%{\custombold{Email}: nguyenduchien1994@gmail.com} \\
+%{\custombold{Phone}: +1 (518)368-2484} \\
 %{\custombold{Skype}: hiendn451} \\
 %{\custombold{Github}: \href{https://github.com/nguyenduchien1994}{\custombold{github.com/nguyenduchien1994}}} \\ 
 %{\custombold{Linkedin}: \href{https://www.linkedin.com/in/hien-nguyen-5567149a}{\custombold{linkedin.com/in/hien-nguyen-5567149a}}}
